--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>website</h3>
-											<p>www.brownsine.com</p>
+											<p><a href="">Chinedu David</a></p>
 										</div>
 									</div>
 								</div>
@@ -706,7 +706,7 @@
 										</div>
 										<div class="single-contact-add-info">
 											<h3>website</h3>
-											<p>www.brownsine.com</p>
+											<p><a href="">Chined David</a></p>
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
