--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>website</h3>
-											<p><a href="">Chinedu David</a></p>
+											<p><a href="https://devisuals.github.io/Portfolio/">Chinedu David</a></p>
 										</div>
 									</div>
 								</div>
@@ -706,7 +706,7 @@
 										</div>
 										<div class="single-contact-add-info">
 											<h3>website</h3>
-											<p><a href="">Chined David</a></p>
+											<p><a href="https://devisuals.github.io/Portfolio/">Chined David</a></p>
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
@@ -733,7 +733,7 @@
 			<div class="container">
 				<div class="hm-footer-copyright text-center">
 					<p>
-						&copy; copyright yourname. design and developed by <a href="https://www.themesine.com/">themesine</a>
+						&copy; copyright Chinedu David. design and developed by <a href="https://devisuals.github.io/Portfolio/">DeVisuals</a>
 					</p><!--/p-->
 				</div><!--/.text-center-->
 			</div><!--/.container-->
