--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 											<div class="col-md-5">
 												<div class="experience-time text-right">
 													<h2>2024 - 2025</h2>
-													<h3>Network Engineer</h3>
+													<h3>IT Analyst Intern</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -420,7 +420,7 @@
 														</h4>
 														<h5>Lagos, Nigeria</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Supported IT operations by maintaining and troubleshooting healthcare IT systems, integrating medical equipment, and resolving network issues. Enhanced system reliability by 15% and reduced ticket resolution time by 20%. Implemented security protocols to protect sensitive data and ensure compliance with healthcare standards. Monitored system logs and optimized workflows for improved performance 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
