--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 														</h4>
 														<h5>Lagos, Nigeria</h5>
 														<p class="description">
-															Supported IT operations by maintaining and troubleshooting healthcare IT systems, integrating medical equipment, and resolving network issues. Enhanced system reliability by 15% and reduced ticket resolution time by 20%. Implemented security protocols to protect sensitive data and ensure compliance with healthcare standards. Monitored system logs and optimized workflows for improved performance 
+															Supported IT operations by maintaining and troubleshooting healthcare IT systems, integrating medical equipment, and resolving network issues. Implemented security protocols to protect sensitive data and ensure compliance with healthcare standards. Monitored system logs and optimized workflows for improved performance 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
