--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 											
 										</li><!-- / li -->
 										<li>
-											<a href="#">
+											<a href="https://www.linkedin.com/in/chinedu-david-272134254/">
 												<i  class="fa fa-linkedin" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
