--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_images.jpg" alt="profile_image">
+								<img src="assets/images/about/profile_images.jpg" alt="profile_image" style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
 								<div class="about-list-icon">
 									<ul>
 										<li>
