--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<!-- Start Navigation -->
 			    <nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
 
-			        <div class="container">
+			        <div class="container" style="width: 100%; max-width: 1200px;">
 
 			            <!-- Start Header Navigation -->
 			            <div class="navbar-header">
