--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 		<header class="top-area">
 			<div class="header-area">
 				<!-- Start Navigation -->
-			    <nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
+			    <nav class="navbar navbar-default bootsnav navbar-fixed dark no-background" style="height: 75px">
 
-			        <div class="container" style="height: 60px">
+			        <div class="container">
 
 			            <!-- Start Header Navigation -->
 			            <div class="navbar-header">
