--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			            <!-- End Header Navigation -->
 
 			            <!-- Collect the nav links, forms, and other content for toggling -->
-			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
+			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu" style="background-color: white;">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
 			                    <li class=" smooth-menu"><a href="#education">education</a></li>
