--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="header-text">
 							<h2>Hi <span>,</span> I am Chinedu David Ikechukwu <span>.</span>   </h2>
 							<p>A SOC Analyst and Penetration Tester</p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<a href="assets/download/Resume.docx" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
