--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												ui/ux design
+												Brute-Force-Analysis</br>-with-Splunk
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
