--- a/index.html
+++ b/index.html
@@ -451,10 +451,10 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/p6.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
+											<a href="https://github.com/chinedudavid-ng/Brute-Force-Analysis-with-Splunk.git">
+												Brute-Force-Analysis</br>-with-Splunk
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -462,7 +462,7 @@
 										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												Brute-Force-Analysis</br>-with-Splunk
+												ui/ux design
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
