--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p6.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/p6.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="https://github.com/chinedudavid-ng/Brute-Force-Analysis-with-Splunk.git">
 												Brute-Force-Analysis</br>-with-Splunk
