--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/j7.jpg" alt="#"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												
@@ -473,7 +473,7 @@
 										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												web design
+												Web Application </br>Penetration Testing
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -490,10 +490,10 @@
 									</div><!-- /.item -->
 								<!--
 									<div class="item">
-										<img src="assets/images/portfolio/p5.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/j7.jpg" alt="#"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												web development
+												
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
