--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/p9.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												Web Application </br>Penetration Testing
