--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 									<div class="item">
 										<img src="assets/images/portfolio/p9.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="https://github.com/chinedudavid-ng/Web-Application-Penetration-Testing.git">
 												Web Application </br>Penetration Testing
 											</a>
 										</div><!-- /.isotope-overlay -->
